kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dvwa-service
spec:
  selector:
    app: dvwa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
